<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".FormFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/app_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_subheading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/app_tagline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        app:errorEnabled="true"
        android:hint="@string/register_name_prompt">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/username_input_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/register_password_prompt">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/password_input_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/register_password_repeat_prompt">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_input_wrapper"
        android:text="@string/register_submit_btn"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        android:text="@string/register_to_login_action"
        android:layout_marginTop="35dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>